<resources>
    <string name="app_name">Vestiaire Weather</string>

    <string name="weather_loading">A la recherche de la météo…</string>
    <string name="weather_city_today">Paris, aujourd\'hui</string>
    <string name="weather_city_date">Paris, %1$s</string>
    <string name="weather_card_more_title">Info supplémentaires</string>
    <string name="weather_temperature">%1$d °C</string>
    <string name="weather_pressure">{wic-barometer}</string>
    <string name="weather_pressure_with_value">%1$d hPa</string>
    <string name="weather_humidity">{wic-humidity}</string>
    <string name="weather_humidity_with_value">%1$d</string>
    <string name="weather_wind_speed">{wic-strong-wind}</string>
    <string name="weather_wind_speed_with_value">%1$d m/s</string>
    <string name="weather_wind_direction">{wic-wind-direction}</string>
    <string name="weather_wind_direction_with_value">%1$d degrés</string>

    <string name="error_generic">Oups ! Une erreur est survenue, veuillez réessayer</string>
    <string name="error_generic_with_info">Oups ! Une erreur est survenue: %1$s</string>
    <string name="error_network">Pas internet ! Regarde par la fenêtre :D</string>
</resources>
