<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/header_color">

    <TextView
        android:id="@+id/weather_details_tv_city"
        android:textSize="@dimen/text_size_big"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="24dp"
        app:layout_constraintRight_toRightOf="parent" />

    <com.mikepenz.iconics.view.IconicsImageView
        android:id="@+id/weather_details_iv_icon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:iiv_color="@android:color/white"
        app:iiv_size="@dimen/icon_weather_size_huge"
        tools:ignore="MissingPrefix"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/weather_details_tv_city"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintVertical_bias="0.3" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:layout_marginStart="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="@+id/weather_details_iv_icon"
        android:layout_marginTop="96dp">

        <TextView
            android:textSize="@dimen/text_size_huge"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/weather_details_tv_temp"/>

        <TextView
            android:textSize="@dimen/text_size_big"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/weather_details_tv_desc" />

    </LinearLayout>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.52"
        tools:layout_editor_absoluteY="461dp"
        tools:layout_editor_absoluteX="0dp" />

    <android.support.v7.widget.CardView
        android:id="@+id/weather_details_cv_more"
        android:layout_width="0dp"
        android:layout_height="0dp"
        style="@style/CardViewStyle"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="16dp"
        android:visibility="invisible">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/card_padding"
            android:paddingRight="@dimen/card_padding"
            android:clickable="true"
            android:background="?attr/selectableItemBackground">

            <TextView
                android:id="@+id/weather_details_cv_more_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/weather_card_more_title"
                android:textSize="@dimen/card_title_size"
                android:paddingTop="@dimen/card_title_top_padding"
                android:paddingBottom="@dimen/card_padding"/>


                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical">

                    <TableRow>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.2"
                            android:text="@string/weather_pressure"
                            android:textSize="@dimen/card_text_size_big"/>

                        <TextView
                            android:id="@+id/weather_details_tv_pressure"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.8"
                            android:textSize="@dimen/card_text_size"/>

                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.2"
                            android:text="@string/weather_humidity"
                            android:textSize="@dimen/card_text_size_big"/>

                        <TextView
                            android:id="@+id/weather_details_tv_humidity"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.8"
                            android:textSize="@dimen/card_text_size"/>

                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.2"
                            android:text="@string/weather_wind_speed"
                            android:textSize="@dimen/card_text_size_big"/>

                        <TextView
                            android:id="@+id/weather_details_tv_wind_speed"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.8"
                            android:textSize="@dimen/card_text_size"/>

                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.2"
                            android:text="@string/weather_wind_direction"
                            android:textSize="@dimen/card_text_size_big"/>

                        <TextView
                            android:id="@+id/weather_details_tv_wind_direction"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.8"
                            android:textSize="@dimen/card_text_size"/>

                    </TableRow>

                </TableLayout>

            </LinearLayout>

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:id="@+id/weather_details_ll_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:background="@color/header_color">

        <ProgressBar
            android:id="@+id/weather_details_pb_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>